--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Is it FIFA 21 Cup Mode?</title>
+        <link rel="shortcut icon" type="image/jpg" href="fifa_icon.png"/>
+    </head>
     <h1>Is It Cup Mode?</h1>
     <div>
         <p>No :(</p>
