--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
 <div>
     <p>No :(</p>
 </div>
+<div>
+    <h2>Sign up for email notifications when cup mode is active</h2>
+
+      <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="email">Last name:</label><br>
+        <input type="email" id="email" name="email">
+        <input type="submit" value="Submit">
+      </form>
+</div>
 
 </html>
