adding thank you page and form updates

--- a/thankyou.html
+++ b/thankyou.html
@@ -24,18 +24,5 @@
             src="https://www.facebook.com/tr?id=276237410705176&ev=PageView&noscript=1" /></noscript>
     <!-- End Facebook Pixel Code -->
 </head>
-<h1>Is It Cup Mode?</h1>
-<div>
-    <p>No :(</p>
-</div>
-<div>
-    <h2>Sign up for email notifications when cup mode is active</h2>
-
-    <form name="ff1" method="post">
-        <input type="email" name="email" id="fremail" placeholder="your@email.com" />
-        <input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="Name" id="frtitle" placeholder="Name" />
-        <input type="submit" name="Submit" value="Continue" onclick="window.location.href = 'https://www.isitcupmode.com/thankyou.html';"/>
-    </form>
-</div>
-
+    <h1>Thanks for signing up!</h1>
 </html>
