adding features page

--- a/features.html
+++ b/features.html
@@ -46,37 +46,38 @@
           <div class="inner">
             <h3 class="masthead-brand">Is It Cup Mode?</h3>
             <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="/index.html">Home</a>
-              <a class="nav-link" href="/features.html">Features</a>
+              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link active" href="/features.html">Features</a>
               <a class="nav-link" href="/contact.html">Contact</a>
             </nav>
           </div>
         </header>
 
         <main role="main" class="inner cover">
-            <h1>No :(</h1>
+            <h1>Current list of features:</h1>
 
-            <div id="signup-form">
-                <p>Sign up for email notifications when cup mode is active</p>
-
-                <form id="main_form" method="post">
-                    <input type="email" name="email" id="fremail" placeholder="your@email.com" value="test@test.com" required />
-                    <input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="Name"
-                        id="frtitle" placeholder="Name" value="test" required />
-                    <input type="submit" value="Continue" />
-                </form>
-
-            </div>
-
-            <div id="thankyou" style="display: none;">
-                Thank you for your submission!
+            <div>
+                <ul>
+                    <li>
+                        Tells you if it's cup mode or not
+                    </li>
+                    <li>
+                        Tells you when cup mode begins
+                    </li>
+                    <li>
+                        Tells you when cup mode will end
+                    </li>
+                    <li>
+                        Tells you when cup mode last ended
+                    </li>
+                </ul>
             </div>
         </main>
 
         <footer class="mastfoot mt-auto">
-            <div class="inner">
-              <p>Copyright © IsItCupMode 2021</p>
-            </div>
+          <div class="inner">
+            <p>Copyright © IsItCupMode 2021</p>
+          </div>
         </footer>
       </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
