--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <footer class="mastfoot mt-auto">
             <div class="inner">
-              <p>Copyright © IsItCupMode 2021</p>
+              <p>Copyright IsItCupMode 2021</p>
             </div>
         </footer>
       </div>
