--- a/features.html
+++ b/features.html
@@ -56,7 +56,7 @@
         <main role="main" class="inner cover">
             <h1>Current list of features:</h1>
 
-            <div>
+            <div class="left-list">
                 <ul>
                     <li>
                         Tells you if it's cup mode or not
@@ -76,7 +76,7 @@
 
         <footer class="mastfoot mt-auto">
           <div class="inner">
-            <p>Copyright © IsItCupMode 2021</p>
+            <p>Copyright IsItCupMode 2021</p>
           </div>
         </footer>
       </div>
