--- a/features.html
+++ b/features.html
@@ -56,7 +56,7 @@
         <main role="main" class="inner cover">
             <h1>Current list of features:</h1>
 
-            <div class="left-list">
+            <div class="text-left">
                 <ul>
                     <li>
                         Tells you if it's cup mode or not
