--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <nav class="nav nav-masthead justify-content-center">
               <a class="nav-link active" href="/index.html">Home</a>
               <a class="nav-link" href="/features.html">Features</a>
+              <a class="nav-link" href="/history.html">History</a>
               <a class="nav-link" href="/contact.html">Contact</a>
             </nav>
           </div>
