--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 console.log(data); //use the console for debugging, F12 in Chrome, not alerts
                 $("#signup-form").css('display', 'none'); //hide form
                 $("#thankyou").css('display', 'block'); //show thankyou
+                fbq('track', 'Lead');
             });
         });
     </script>
