--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
         </header>
 
         <main role="main" class="inner cover">
-            <h1>No :(</h1>
-
+            <h1>No, it is not cup mode :(</h1>
+            <br />
             <div id="signup-form">
                 <p>Sign up for email notifications when cup mode is active</p>
 
                 <form id="main_form" method="post">
-                    <input type="email" name="email" id="email" placeholder="your@email.com" value="bruceW@gmail.com" required />
-                    <input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="First Name"
+                    Email:&nbsp;<input type="email" name="email" id="email" placeholder="your@email.com" value="bruceW@gmail.com" required />
+                    <br />
+                    First Name:&nbsp;<input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="First Name"
                         id="firstName" placeholder="First Name" value="Bruce" required />
-                    <input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="Last Name"
+                    <br />
+                    Last Name:&nbsp;<input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="Last Name"
                     id="lastName" placeholder="Last Name" value="Wayne" required />
+                    <br />
                     <input type="submit" value="Continue" />
                 </form>
 
