--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <form id="main_form" method="post">
                     Email:&nbsp;<input type="email" name="email" id="email" placeholder="your@email.com" value="bruceW@gmail.com" required />
                     <br />
-                    First Name:&nbsp;<input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="First Name"
+                    First Name:&nbsp;<input type="text" title="Please enter only alphanumeric characters." name="First Name"
                         id="firstName" placeholder="First Name" value="Bruce" required />
                     <br />
-                    Last Name:&nbsp;<input type="text" pattern="[a-z0-9. -]+" title="Please enter only alphanumeric characters." name="Last Name"
+                    Last Name:&nbsp;<input type="text" title="Please enter only alphanumeric characters." name="Last Name"
                     id="lastName" placeholder="Last Name" value="Wayne" required />
                     <br />
                     <input type="submit" value="Continue" />
