--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 console.log(data); //use the console for debugging, F12 in Chrome, not alerts
                 $("#signup-form").css('display', 'none'); //hide form
                 $("#thankyou").css('display', 'block'); //show thankyou
+
+                fbq('init', '276237410705176',
+                {
+                    em: document.getElementById("email").value,
+                    fn: document.getElementById("firstName").value,
+                    ln: document.getElementById("lastName").value
+                });
+
                 fbq('track', 'Lead');
             });
         });
@@ -33,12 +41,7 @@
             s.parentNode.insertBefore(t, s)
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '276237410705176',
-        {
-            em: document.getElementById("email").value,
-            fn: document.getElementById("firstName").value,
-            ln: document.getElementById("lastName").value
-        });
+        fbq('init', '276237410705176');
         fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
