--- a/history.html
+++ b/history.html
@@ -6,9 +6,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="cover.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
-    <noscript>
-        <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=276237410705176&ev=ViewContent"/>
-    </noscript>
 </head>
 <body class="text-center">
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
@@ -28,7 +25,11 @@
             <h1>History</h1>
 
             <div class="text-left">
-                This page has a simple test of the IMG pixel
+                This page has a simple test of the IMG pixel.
+
+                Here is the blank pixel:
+
+                <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=276237410705176&ev=ViewContent"/>
             </div>
         </main>
 
