--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
             <nav class="nav nav-masthead justify-content-center">
               <a class="nav-link" href="/index.html">Home</a>
               <a class="nav-link" href="/features.html">Features</a>
-              <a class="nav-link active" href="/history.html">History</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/history.html">History</a>
+              <a class="nav-link active" href="/contact.html">Contact</a>
             </nav>
           </div>
         </header>
@@ -25,11 +25,7 @@
             <h1>History</h1>
 
             <div class="text-left">
-                This page has a simple test of the IMG pixel.
-
-                Here is the blank pixel:
-
-                <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=276237410705176&ev=ViewContent"/>
+                Contact Us
             </div>
         </main>
 
