--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,10 @@
             <div class="text-left">
                 Contact Us
             </div>
+
+            <br/>
+            Subscribe?&nbsp;
+            <input id="chkThis" type="checkbox" />
         </main>
 
         <footer class="mastfoot mt-auto">
