--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,9 @@
             <br/>
             Subscribe?&nbsp;
             <input id="chkThis" type="checkbox" />
+            <br />
+            <input type="button" title="Subscribe" id="btnSubscribe" />
+
         </main>
 
         <footer class="mastfoot mt-auto">
