--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             Subscribe?&nbsp;
             <input id="chkThis" type="checkbox" />
             <br />
-            <input type="button" title="Subscribe" id="btnSubscribe" />
+            <input type="button" title="Subscribe" id="btnSubscribe" value="Subscribe"/>
 
         </main>
 
