--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
 
-        fbq('consent', $("#cookiesCheckbox")[0].checked ? 'grant' : 'revoke');
+
         fbq('init', '276237410705176');
         fbq('track', 'PageView');
     </script>
@@ -31,9 +31,14 @@
     <!-- End Facebook Pixel Code -->
 
     <script>
-      $("#cookiesCheckbox")[0].change(function() {
-        fbq('consent', this.checked ? 'grant' : 'revoke');
+
+      $( document ).ready(function() {
+        fbq('consent', $("#cookiesCheckbox")[0].checked ? 'grant' : 'revoke');
+        $("#cookiesCheckbox")[0].change(function() {
+          fbq('consent', this.checked ? 'grant' : 'revoke');
+        });
       });
+
     </script>
 </head>
 <body class="text-center">
