--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '276237410705176');
         fbq('track', 'PageView');
+        fbq('track', 'ViewContent',
+        {
+  content_name: 'Product #35',
+  content_ids: ['35'],
+  content_type: 'product',
+  value: 5,
+  currency: 'USD'
+ });
+        fbq('track', 'AddToCart',
+        {
+  content_name: 'Product #35',
+  content_ids: ['35'],
+  content_type: 'product',
+  value: 5,
+  currency: 'USD'
+ });
+        fbq('track', 'Purchase',
+        {
+  content_name: 'Product #35',
+  content_ids: ['35'],
+  content_type: 'product',
+  value: 5,
+  currency: 'USD'
+ });
+
     </script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=276237410705176&ev=PageView&noscript=1" /></noscript>
