--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="cover.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
-
+    <meta name="facebook-domain-verification" content="i2p39y5qilepiakigqtb42oak00niy" />
     <script type="text/javascript">
         $(function () { //shorthand document.ready function
             $('#main_form').on('submit', function (e) { //use on if jQuery 1.7+
