--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
 
 <head>
+
+    <meta property="og:title" content="Facebook T-Shirt">
+<meta property="og:description" content="Unisex Facebook T-shirt, Small">
+<meta property="og:url" content="https://example.org/facebook">
+<meta property="og:image" content="https://example.org/facebook.jpg">
+<meta property="product:brand" content="Facebook">
+<meta property="product:availability" content="in stock">
+<meta property="product:condition" content="new">
+<meta property="product:price:amount" content="5">
+<meta property="product:price:currency" content="USD">
+<meta property="product:retailer_item_id" content="35">
+
     <title>Is it FIFA 21 Cup Mode?</title>
     <link rel="shortcut icon" type="image/jpg" href="fifa_icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
