--- a/tagmanager.html
+++ b/tagmanager.html
@@ -48,7 +48,7 @@
       <div>
         This is an iframe:
 
-        <iframe src="https://www.isitcupmode.com/iframepage.html" />
+        <iframe src="https://misha123.tiiny.site/index.html" />
       </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="jquery-slim.min.js"><\/script>')</script>
