--- a/iframepage.html
+++ b/iframepage.html
@@ -11,11 +11,23 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-533XSW8');</script>
   <!-- End Google Tag Manager -->
+
+  <script>
+    function fireEvent(){
+
+    }
+  </script>
 </head>
 <body class="text-center">
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-533XSW8"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
+
+  <input id="btnClickMe" type="button" title="click me!" value="click me!" text="click me!" style="top: 92px; position: absolute;" onclick="fireEvent()" />
+  <a id="lnkJobs" style="top: 112px; position: absolute;" href="job.html">Job!</a>
+
+
 </body>
 </html>
