--- a/tagmanager.html
+++ b/tagmanager.html
@@ -50,6 +50,10 @@
 
         <iframe src="https://misha123.tiiny.site/index.html" />
       </div>
+
+      <br/>
+
+      <a id="lnkJobs" style="top: 112px; position: absolute;" href="job.html">Job!</a>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="jquery-slim.min.js"><\/script>')</script>
     <script src="/popper.min.js"></script>
