--- a/tagmanager.html
+++ b/tagmanager.html
@@ -28,6 +28,7 @@
               <a class="nav-link" href="/features.html">Features</a>
               <a class="nav-link" href="/history.html">History</a>
               <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link" href="job.html">Job!</a>
             </nav>
           </div>
         </header>
@@ -48,7 +49,7 @@
       <div>
         This is an iframe:
 
-        <iframe src="https://misha123.tiiny.site/index.html" />
+        <iframe src="https://misha123.tiiny.site/index.html">
       </div>
 
       <br/>
