--- a/locator.html
+++ b/locator.html
@@ -32,13 +32,13 @@
   <meta name="twitter:card" content="summary">
   <link rel="canonical" href="https://locator.chick-fil-a.com.yext-cdn.com/search" />
   <title>Store Locator</title>
-  <!-- Google Tag Manager -->
+<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TZDQNBB');</script>
-<!-- End Google Tag Manager -->
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-533XSW8');</script>
+  <!-- End Google Tag Manager -->
   <script type="text/javascript">window.Yext = (function(Yext){Yext["BaseUrl"] = ""; return Yext;})(window.Yext || {});</script>
   <script type="text/javascript">window.Yext = (function(Yext){Yext["locale"] = "en"; return Yext;})(window.Yext || {});</script>
   <script id="monitoring-data" type="text/data">{"isStaging":false,"siteDomain":"locator.chick-fil-a.com.yext-cdn.com","siteId":1586,"soyTemplateName":"search.layout"}</script>
@@ -48,10 +48,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script>ya('set',{"searchId":"entitysearch"});ya('pageview');</script>
   </head>
   <body class="Text">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZDQNBB"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-533XSW8"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
 <a href="#first-anchor" class="sr-only sr-only-focusable" id="skip-nav">Skip to content</a>
 <main id="main" class="Main">
   <a href="#skip-nav" class="sr-only sr-only-focusable" id="first-anchor">Return to Nav</a>
