--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '276237410705176', {external_id: 'testExternal'});
-        fbq('track', 'PageView');
+        fbq('trackCustom', 'PageView1234Custom');
+
         fbq('track', 'ViewContent',
         {
   content_name: 'Product #35',
