--- a/adobe.html
+++ b/adobe.html
@@ -7,7 +7,7 @@
     <link href="cover.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
 
-    <script src="//assets.adobedtm.com/180c356c94b3/7e1e24a8f474/launch-2fb34748a8d8-development.min.js" async></script>
+    <script src="https://assets.adobedtm.com/180c356c94b3/7e1e24a8f474/launch-2fb34748a8d8-development.min.js" async></script>
     <script src="https://assets.adobedtm.com/180c356c94b3/32b17e322d1d/launch-b497cbf76c44-development.min.js" async></script>
     </head>
 <body>
