--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             s.parentNode.insertBefore(t, s)
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('set', 'autoConfig', 'false', '276237410705176')
         fbq('init', '276237410705176', {});
 
         fbq('track', 'Purchase',
