--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             s.parentNode.insertBefore(t, s)
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('set', 'autoConfig', 'false', '276237410705176')
+           // fbq('set', 'autoConfig', 'false', '276237410705176')
         fbq('init', '276237410705176', {});
-
+        fbq('track', 'PageView', {'page_description':'test123'});
         fbq('track', 'Purchase',
         {
   value: null,
