--- a/image-pixel.html
+++ b/image-pixel.html
@@ -6,27 +6,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="cover.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
-    <!-- Facebook Pixel Code -->
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '311811804267474', {  em: 'bruce@wayne.com',         //Values will be hashed automatically by the pixel using SHA-256
-  fn: 'Bruce',    
-  ln: 'Wayne'      });
-        fbq('track', 'TestCustomEvent', {'page_description':'test123', 'test_param': '1'});
-
-    </script>
-    <!-- End Facebook Pixel Code -->
-
 </head>
 <body class="text-center">
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
@@ -43,8 +22,10 @@
         </header>
 
         <main role="main" class="inner cover">
-          <div>GCP Test Page</div>
+          <div>Image Pixel Test Page</div>
         </main>
+
+        <img src="https://www.facebook.com/tr?id=311811804267474&ev=TestCookieSync" height="1" width="1" style="display:none"/>
 
         <footer class="mastfoot mt-auto">
             <div class="inner">
