--- a/tagmanager.html
+++ b/tagmanager.html
@@ -34,6 +34,9 @@
         </header>
 
         <main role="main" class="inner cover">
+          <script>
+            dataLayer.push({"eventId":"1234567"});
+          </script>
             <h1>Tag Manager</h1>
 
         </main>
