--- a/image-pixel.html
+++ b/image-pixel.html
@@ -25,7 +25,7 @@
           <div>Image Pixel Test Page</div>
         </main>
 
-        <img src="https://www.facebook.com/tr?id=311811804267474&ev=TestCookieSync" height="1" width="1" style="display:none"/>
+        <img src="https://www.facebook.com/tr?id=311811804267474&ev=TestCookieSync&ts=1665705081007&cd[ts]=1665705081007" height="1" width="1" style="display:none"/>
 
         <footer class="mastfoot mt-auto">
             <div class="inner">
