--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,11 @@
         }(window, document, 'script',
             'https://connect.facebook.net/en_US/fbevents.js');
 
+        fbq('consent', 'revoke');
 
         fbq('init', '276237410705176');
         fbq('track', 'PageView');
+        fbq('track', 'PageView1');
     </script>
     <noscript>
       <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=276237410705176&ev=PageView&noscript=1" />
